--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,66 @@
     padding: 0%;
     margin: 0%;
 }
+#header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-left: 160px;
+}
+.header-link {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 10px;
+}
+ul{
+display: flex;
+flex-direction: row;
+margin-right: 120px;
+}
+.sign-up{
+    background-color: #3882f6;
+    color: white;
+    width: 100px;
+    height: 40px;
+    border: 1px;
+    border-radius: 10px;
+    margin-left: 160px;
+}
+#hero-main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+    margin-left: 160px;
+    margin-top: 100px;
+}
+#hero-secondary{
+    margin-left: 160px;
+}
 .header {
     background-color: #1F2937;
-    width: 100%;
+    font-size: 18px;
+    color: #E5E7EB;
+    max-height: 420px;
+}
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+}
+.thumbsup{
+position: relative;
+    left: 800px;
+    bottom: 230px;
     
 }
+.container-one{
+    text-align: center;
+}
+#info-header {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
 .container-two {
     background-color: #E5E7EB;
     font-size: 36px;
