--- a/styles.css
+++ b/styles.css
@@ -54,16 +54,57 @@ position: relative;
     
 }
 .container-one{
-    text-align: center;
+    min-height: 400px;
+    text-align: center; 
+    display: flex; 
+    flex-direction:column;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-#info-header {
+
+.h2 {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    text-align: center;
+    margin-bottom: 50px;
 }
+.boxes {
+    color: #1F2937;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    text-align: center;
+    flex-direction: row;
+    align-items: center;
+    
+   
+    
+    
+}
+.box{
+    width: 140px;
+    height: 140px;
+    border: 3px solid blue;
+    border-radius: 15px;
+    margin-left: 60px;
+    margin-bottom: 10px;
+    max-width: 150px;         
+    
+    
+}
+
+
 
 .container-two {
     background-color: #E5E7EB;
     font-size: 36px;
     font-style:italic;
+
 }
+
+
+
+
+
